added new icons
fa-backpack, fa-bandage, fa-battery-bolt, fa-bolt-slash, fa-boot, fa-car-burst, fa-child, fa-cloud-rain, fa-eye-light, fa-file-code, fa-floppy-disk, fa-gauge-circle-bolt, fa-inhaler, fa-kit-medical, fa-moon, fa-person-seat-reclined, fa-person-walking, fa-road, fa-solar-panel, fa-square-bolt, fa-square-info, fa-square-poll-vertical, fa-sun-bright, fa-sun, fa-sunrise, fa-sunset, fa-syringe, fa-transformer-bolt, fa-truck-fast, fa-utility-pole, fa-watch-fitness, fa-wind, nxp-car-drive, nxp-hand-holding-badge, nxp-rf-slash, nxp-tv-station

--- a/demo.html
+++ b/demo.html
@@ -146,11 +146,11 @@
     }
     @font-face {
       font-family: 'nxp-icon';
-      src: url('./font/nxp-icon.eot?47261043');
-      src: url('./font/nxp-icon.eot?47261043#iefix') format('embedded-opentype'),
-           url('./font/nxp-icon.woff?47261043') format('woff'),
-           url('./font/nxp-icon.ttf?47261043') format('truetype'),
-           url('./font/nxp-icon.svg?47261043#nxp-icon') format('svg');
+      src: url('./font/nxp-icon.eot?79129410');
+      src: url('./font/nxp-icon.eot?79129410#iefix') format('embedded-opentype'),
+           url('./font/nxp-icon.woff?79129410') format('woff'),
+           url('./font/nxp-icon.ttf?79129410') format('truetype'),
+           url('./font/nxp-icon.svg?79129410#nxp-icon') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -1826,6 +1826,132 @@
         </div>
         <div class="span3" title="Code: 0xe9cd">
           <i class="demo-icon nxp-sustainability">&#xe9cd;</i> <span class="i-name">nxp-sustainability</span><span class="i-code">0xe9cd</span>
+        </div>
+        <div class="span3" title="Code: 0xe9ce">
+          <i class="demo-icon fa-backpack">&#xe9ce;</i> <span class="i-name">fa-backpack</span><span class="i-code">0xe9ce</span>
+        </div>
+        <div class="span3" title="Code: 0xe9cf">
+          <i class="demo-icon fa-bandage">&#xe9cf;</i> <span class="i-name">fa-bandage</span><span class="i-code">0xe9cf</span>
+        </div>
+      </div>
+      <div class="row">
+        <div class="span3" title="Code: 0xe9d0">
+          <i class="demo-icon fa-battery-bolt">&#xe9d0;</i> <span class="i-name">fa-battery-bolt</span><span class="i-code">0xe9d0</span>
+        </div>
+        <div class="span3" title="Code: 0xe9d1">
+          <i class="demo-icon fa-battery-slash-1">&#xe9d1;</i> <span class="i-name">fa-battery-slash-1</span><span class="i-code">0xe9d1</span>
+        </div>
+        <div class="span3" title="Code: 0xe9d2">
+          <i class="demo-icon fa-boot">&#xe9d2;</i> <span class="i-name">fa-boot</span><span class="i-code">0xe9d2</span>
+        </div>
+        <div class="span3" title="Code: 0xe9d3">
+          <i class="demo-icon fa-car-burst">&#xe9d3;</i> <span class="i-name">fa-car-burst</span><span class="i-code">0xe9d3</span>
+        </div>
+      </div>
+      <div class="row">
+        <div class="span3" title="Code: 0xe9d4">
+          <i class="demo-icon fa-child">&#xe9d4;</i> <span class="i-name">fa-child</span><span class="i-code">0xe9d4</span>
+        </div>
+        <div class="span3" title="Code: 0xe9d5">
+          <i class="demo-icon fa-cloud-rain">&#xe9d5;</i> <span class="i-name">fa-cloud-rain</span><span class="i-code">0xe9d5</span>
+        </div>
+        <div class="span3" title="Code: 0xe9d6">
+          <i class="demo-icon fa-eye-light">&#xe9d6;</i> <span class="i-name">fa-eye-light</span><span class="i-code">0xe9d6</span>
+        </div>
+        <div class="span3" title="Code: 0xe9d7">
+          <i class="demo-icon fa-file-code">&#xe9d7;</i> <span class="i-name">fa-file-code</span><span class="i-code">0xe9d7</span>
+        </div>
+      </div>
+      <div class="row">
+        <div class="span3" title="Code: 0xe9d8">
+          <i class="demo-icon fa-floppy-disk">&#xe9d8;</i> <span class="i-name">fa-floppy-disk</span><span class="i-code">0xe9d8</span>
+        </div>
+        <div class="span3" title="Code: 0xe9d9">
+          <i class="demo-icon fa-gauge-circle-bolt">&#xe9d9;</i> <span class="i-name">fa-gauge-circle-bolt</span><span class="i-code">0xe9d9</span>
+        </div>
+        <div class="span3" title="Code: 0xe9da">
+          <i class="demo-icon fa-inhaler">&#xe9da;</i> <span class="i-name">fa-inhaler</span><span class="i-code">0xe9da</span>
+        </div>
+        <div class="span3" title="Code: 0xe9db">
+          <i class="demo-icon fa-kit-medical">&#xe9db;</i> <span class="i-name">fa-kit-medical</span><span class="i-code">0xe9db</span>
+        </div>
+      </div>
+      <div class="row">
+        <div class="span3" title="Code: 0xe9dc">
+          <i class="demo-icon fa-moon">&#xe9dc;</i> <span class="i-name">fa-moon</span><span class="i-code">0xe9dc</span>
+        </div>
+        <div class="span3" title="Code: 0xe9dd">
+          <i class="demo-icon fa-person-seat-reclined">&#xe9dd;</i> <span class="i-name">fa-person-seat-reclined</span><span class="i-code">0xe9dd</span>
+        </div>
+        <div class="span3" title="Code: 0xe9de">
+          <i class="demo-icon fa-person-walking">&#xe9de;</i> <span class="i-name">fa-person-walking</span><span class="i-code">0xe9de</span>
+        </div>
+        <div class="span3" title="Code: 0xe9df">
+          <i class="demo-icon fa-road">&#xe9df;</i> <span class="i-name">fa-road</span><span class="i-code">0xe9df</span>
+        </div>
+      </div>
+      <div class="row">
+        <div class="span3" title="Code: 0xe9e0">
+          <i class="demo-icon fa-square-bolt">&#xe9e0;</i> <span class="i-name">fa-square-bolt</span><span class="i-code">0xe9e0</span>
+        </div>
+        <div class="span3" title="Code: 0xe9e1">
+          <i class="demo-icon fa-solar-panel">&#xe9e1;</i> <span class="i-name">fa-solar-panel</span><span class="i-code">0xe9e1</span>
+        </div>
+        <div class="span3" title="Code: 0xe9e2">
+          <i class="demo-icon fa-square-info">&#xe9e2;</i> <span class="i-name">fa-square-info</span><span class="i-code">0xe9e2</span>
+        </div>
+        <div class="span3" title="Code: 0xe9e3">
+          <i class="demo-icon fa-square-poll-vertical">&#xe9e3;</i> <span class="i-name">fa-square-poll-vertical</span><span class="i-code">0xe9e3</span>
+        </div>
+      </div>
+      <div class="row">
+        <div class="span3" title="Code: 0xe9e4">
+          <i class="demo-icon fa-sun-bright">&#xe9e4;</i> <span class="i-name">fa-sun-bright</span><span class="i-code">0xe9e4</span>
+        </div>
+        <div class="span3" title="Code: 0xe9e5">
+          <i class="demo-icon fa-sun">&#xe9e5;</i> <span class="i-name">fa-sun</span><span class="i-code">0xe9e5</span>
+        </div>
+        <div class="span3" title="Code: 0xe9e6">
+          <i class="demo-icon fa-sunrise">&#xe9e6;</i> <span class="i-name">fa-sunrise</span><span class="i-code">0xe9e6</span>
+        </div>
+        <div class="span3" title="Code: 0xe9e7">
+          <i class="demo-icon fa-sunset">&#xe9e7;</i> <span class="i-name">fa-sunset</span><span class="i-code">0xe9e7</span>
+        </div>
+      </div>
+      <div class="row">
+        <div class="span3" title="Code: 0xe9e8">
+          <i class="demo-icon fa-syringe">&#xe9e8;</i> <span class="i-name">fa-syringe</span><span class="i-code">0xe9e8</span>
+        </div>
+        <div class="span3" title="Code: 0xe9e9">
+          <i class="demo-icon fa-transformer-bolt">&#xe9e9;</i> <span class="i-name">fa-transformer-bolt</span><span class="i-code">0xe9e9</span>
+        </div>
+        <div class="span3" title="Code: 0xe9ea">
+          <i class="demo-icon fa-truck-fast">&#xe9ea;</i> <span class="i-name">fa-truck-fast</span><span class="i-code">0xe9ea</span>
+        </div>
+        <div class="span3" title="Code: 0xe9eb">
+          <i class="demo-icon fa-utility-pole">&#xe9eb;</i> <span class="i-name">fa-utility-pole</span><span class="i-code">0xe9eb</span>
+        </div>
+      </div>
+      <div class="row">
+        <div class="span3" title="Code: 0xe9ec">
+          <i class="demo-icon fa-watch-fitness">&#xe9ec;</i> <span class="i-name">fa-watch-fitness</span><span class="i-code">0xe9ec</span>
+        </div>
+        <div class="span3" title="Code: 0xe9ed">
+          <i class="demo-icon fa-wind">&#xe9ed;</i> <span class="i-name">fa-wind</span><span class="i-code">0xe9ed</span>
+        </div>
+        <div class="span3" title="Code: 0xe9ee">
+          <i class="demo-icon nxp-car-drive">&#xe9ee;</i> <span class="i-name">nxp-car-drive</span><span class="i-code">0xe9ee</span>
+        </div>
+        <div class="span3" title="Code: 0xe9ef">
+          <i class="demo-icon nxp-hands-holding-badge">&#xe9ef;</i> <span class="i-name">nxp-hands-holding-badge</span><span class="i-code">0xe9ef</span>
+        </div>
+      </div>
+      <div class="row">
+        <div class="span3" title="Code: 0xe9f0">
+          <i class="demo-icon nxp-rf-slash">&#xe9f0;</i> <span class="i-name">nxp-rf-slash</span><span class="i-code">0xe9f0</span>
+        </div>
+        <div class="span3" title="Code: 0xe9f1">
+          <i class="demo-icon nxp-tv-station">&#xe9f1;</i> <span class="i-name">nxp-tv-station</span><span class="i-code">0xe9f1</span>
         </div>
       </div>
     </div>
